# ecasound

./: .gitignore  AUTHORS  BUGS  COPYING  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  RELNOTES  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen-cvs.sh  autogen-vc.sh  autogen.sh  config.guess  config.h.in  configure  configure.ac  configure.in  cvscompile  ecasound.mdk.spec  ecasound.mdk.spec.in  ecasound.pld.spec.in  ecasound.spec  ecasound.spec.in  ecasoundrc.in  effect_presets  generic_oscillators  mkinstalldirs  multichain_effect_presets  singlechain_effect_presets
Documentation/: Makefile.am  Makefile.in  doxygen_pages.html  ecafixdc.1  ecalength.1  ecalength_manpage.html  ecalength_manpage.yo  ecamonitor.1  ecanormalize.1  ecaplay.1  ecasignalview.1  ecasound-iam.1  ecasound-iam_manpage.html  ecasound-iam_manpage.man  ecasound-iam_manpage.yo  ecasound.1  ecasound_faq.html  ecasound_faq.txt  ecasound_faq.yo  ecasound_manpage.html  ecasound_manpage.man  ecasound_manpage.yo  ecasound_osc_interface.txt  ecasoundrc.5  ecasoundrc_manpage.html  ecasoundrc_manpage.man  ecasoundrc_manpage.yo  ecatools.1  ecatools_manpage.html  ecatools_manpage.man  ecatools_manpage.yo  edi-1.txt  edi-15.txt  edi-16.txt  edi-18.txt  edi-19.txt  edi-20.txt  edi-21.txt  edi-22.txt  edi-23.txt  (+28 more)
Documentation/archived/: edi-13.txt  edi-16.txt  edi-18.txt  edi-19.txt  edi-20.txt  edi-22.txt  edi-23.txt  edi-24.txt  edi-26.txt  edi-28.txt  edi-29.txt  edi-30.txt  edi-34.txt  edi-35.txt  edi-38.txt  edi-41.txt  edi-6.txt
Documentation/programmers_guide/: Makefile.am  Makefile.in  ecasound_programmers_guide.txt  eci_doc.html  eci_doc.latex  eci_doc.yo  index.html  programmers_guide.html  programmers_guide.latex  programmers_guide.yo
ecasound/: Makefile.am  Makefile.in  eca-comhelp.cpp  eca-console.h  eca-curses.cpp  eca-curses.h  eca-neteci-server.cpp  eca-neteci-server.h  eca-plaintext.cpp  eca-plaintext.h  eca-text.cpp  eca-text.h  ecamonitor  ecasound.cpp  ecasound.h  textdebug.cpp  textdebug.h
ecatools/: Makefile.am  Makefile.in  ecaconvert.cpp  ecafixdc.cpp  ecalength.c  ecamonitor  ecanormalize.cpp  ecaplay.c  ecasignalview.cpp  ecasound.el  ecatools_convert.cpp  ecatools_convert.h  ecatools_fixdc.cpp  ecatools_fixdc.h  ecatools_normalize.cpp  ecatools_normalize.h  ecatools_play.cpp  ecatools_play.h  ecatools_signalview.cpp  ecatools_signalview.h  ecicpp_helpers.cpp  ecicpp_helpers.h
ecawave/: BUGS  COPYING.Qt  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  cvscompile  ecawave.spec  mkinstalldirs
ecawave/Documentation/: Makefile  (+12 more)
kvutils/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  com_line.cpp  com_line.h  command_queue.cpp  command_queue.h  configure  configure.in  dbc.h  definition_by_contract.h  kvu_com_line.cpp  kvu_com_line.h  kvu_dbc.cpp  kvu_dbc.h  kvu_debug.cpp  kvu_debug.h  kvu_fd_io.cpp  kvu_inttypes.h  kvu_locks.cpp  kvu_locks.h  kvu_message_item.cpp  kvu_message_item.h  kvu_message_queue.h  kvu_numtostr.cpp  kvu_numtostr.h  kvu_object_queue.h  kvu_procedure_timer.cpp  kvu_procedure_timer.h  kvu_rtcaps.cpp  kvu_rtcaps.h  kvu_temporary_file_directory.cpp  kvu_temporary_file_directory.h  kvu_threads.cpp  kvu_threads.h  kvu_threads.lo  kvu_timestamp.cpp  kvu_timestamp.h  (+21 more)
libecasound/: ChangeLog  Makefile.am  Makefile.in  acinclude.m4  adsr-envelope.h  audio-stamp.cpp  audio-stamp.h  audioeffectx.h  audiofx.cpp  audiofx.h  audiofx_amplitude.cpp  audiofx_amplitude.h  audiofx_amplitude_test.h  audiofx_analysis.cpp  audiofx_analysis.h  audiofx_compressor.cpp  audiofx_compressor.h  audiofx_envelope_modulation.cpp  audiofx_envelope_modulation.h  audiofx_filter.cpp  audiofx_filter.h  audiofx_ladspa.cpp  audiofx_ladspa.h  audiofx_lv2.cpp  audiofx_lv2.h  audiofx_lv2_world.cpp  audiofx_lv2_world.h  audiofx_misc.cpp  audiofx_misc.h  audiofx_mixing.cpp  audiofx_mixing.h  audiofx_rcfilter.cpp  audiofx_rcfilter.h  audiofx_reverb.cpp  audiofx_reverb.h  audiofx_timebased.cpp  audiofx_timebased.h  audiofx_vst.cpp  audiofx_vst.h  audiogate.cpp  (+257 more)
libecasoundc/: ChangeLog  Makefile.am  eca-control-interface.cpp  eca-control-interface.h  ecasoundc-config.in  ecasoundc.cpp  ecasoundc.h  ecasoundc_sa.c  ecicpp_tester.cpp  libecasoundc-config.in  libecasoundc_tester.c
libqtecasound/: ChangeLog  Makefile.am  Makefile.in  qeaudioformatinput.cpp  qeaudioformatinput.h  qeaudioobjectconfiguration.cpp  qeaudioobjectconfiguration.h  qebuttonrow.cpp  qebuttonrow.h  qechainoperator.h  qechainoperatorinput.cpp  qechainoperatorinput.h  qechainopinput.cpp  qechainopinput.h  qecontroller.h  qedialog.cpp  qedialog.h  qefilenameinput.cpp  qefilenameinput.h  qeinput.cpp  qeinput.h  qelibraryobject.h  qeobjectinput.cpp  qeobjectinput.h  qeobjectmap.cpp  qeobjectmap.h  qeokcancelinput.cpp  qeokcancelinput.h  qeoperatorconfiguration.cpp  qeoperatorconfiguration.h  qeoperatorinput.cpp  qesignallevel.cpp  qesignallevel.h  qeslider.cpp  qeslider.h  qestringdialog.cpp  qestringdialog.h  qestringlistdialog.cpp  qestringlistdialog.h  qestringparameterinput.cpp
pyecasound/: ChangeLog  Makefile.am  TODO  ecacontrol.py  ecanative.py  eci.py  pyeca-control.h  pyeca.py  pyecasound.c  pyecasound.cpp  pyecasound.h  test1_stresstest.py  test2_stresstest.py
qtecasound/: Makefile.am  Makefile.in  eca-qtchain.cpp  eca-qtchain.h  eca-qtchainselectdialog.cpp  eca-qtchainselectdialog.h  eca-qtchainsetup.cpp  eca-qtchainsetup.h  eca-qtdebug.cpp  eca-qtdebug.h  eca-qtdebugtab.cpp  eca-qtdebugtab.h  eca-qtinte.cpp  eca-qtinte.h  eca-qtiodevdialog.cpp  eca-qtiodevdialog.h  eca-qtlevelmeter.cpp  eca-qtlevelmeter.h  eca-qtmain.cpp  eca-qtmain.h  eca-qtrtposition.cpp  eca-qtrtposition.h  eca-qtsession.cpp  eca-qtsession.h  eca-qtsignallevel.cpp  eca-qtsignallevel.h  eca-qtwavedata.cpp  eca-qtwavedata.h  eca-qtwaveform.cpp  eca-qtwaveform.h  qebuttonrow.h  qestringdialog.cpp  qestringdialog.h  qstringdialog.cpp  qstringdialog.h  qtdebug_if.cpp  qtdebug_if.h
rubyecasound/: Makefile.am  README  control-interface.rb  ecasound.rb  stresstest.rb
(+399 files in other folders)
